--- a/requirements/requirements_RAG.txt
+++ b/requirements/requirements_RAG.txt
@@ -1,73 +1,117 @@
-
-
-
-
-#RAG
+#RAG and Scrapy
+absl-py==2.1.0
 accelerate==0.34.2
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
+anyio==4.4.0
 appdirs==1.4.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 astroid==3.2.4
+asttokens==2.4.1
+astunparse==1.6.3
 async-lru==2.0.4
 async-timeout==4.0.3
+attrs==24.2.0
 Automat==24.8.1
 babel==2.16.0
 backoff==2.2.1
+beautifulsoup4==4.12.3
 black==24.8.0
+bleach==6.1.0
 blinker==1.8.2
 boilerpy3==1.0.7
 botocore==1.35.20
+cachetools==5.5.0
 cattrs==24.1.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
 cloudpickle==3.0.0
+colorama==0.4.6
 comm==0.2.2
 constantly==23.10.4
 construct==2.5.3
+contourpy==1.3.0
 cryptography==43.0.1
 cssselect==1.2.0
+cycler==0.12.1
 dask==2024.8.0
 datasets==3.0.0
 debugpy==1.8.5
+decorator==5.1.1
+defusedxml==0.7.1
 dill==0.3.8
 distributed==2024.8.0
+docopt==0.6.2
 Events==0.5
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
+filelock==3.16.0
 Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.53.1
 fqdn==1.5.1
 frozenlist==1.4.1
+fsspec==2024.6.1
+gast==0.6.0
 gensim==4.3.3
 gitdb==4.0.11
 GitPython==3.1.43
+google-pasta==0.2.0
+greenlet==3.0.3
+grpcio==1.66.1
 gunicorn==23.0.0
+h11==0.14.0
+h5py==3.11.0
 HeapDict==1.0.1
+httpcore==1.0.5
+httpx==0.27.2
 huggingface-hub==0.24.7
 hyperlink==21.0.0
+idna==3.8
 imageio==2.35.1
 imbalanced-learn==0.12.3
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+incremental==24.7.2
+inflect==7.4.0
 ipykernel==6.29.5
+ipython==8.18.1
 ipywidgets==8.1.5
 isoduration==20.11.0
 isort==5.13.2
 itemadapter==0.9.0
 itemloaders==1.3.1
 itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
 jmespath==1.0.1
+joblib==1.4.2
 json5==0.9.25
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
 jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 keras==3.5.0
+kiwisolver==1.4.7
 langchain==0.2.15
 langchain-core==0.2.37
 langchain-ollama==0.1.3
@@ -75,51 +119,113 @@ langchain-text-splitters==0.2.2
 langsmith==0.1.108
 lazy-imports==0.3.1
 lazy-object-proxy==1.10.0
+lazy_loader==0.4
+libclang==18.1.1
+llvmlite==0.43.0
 locket==1.0.0
 lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mdurl==0.1.2
+mistune==3.0.2
+ml-dtypes==0.4.1
+monotonic==1.6
 more-itertools==10.5.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.0.5
 multiprocess==0.70.16
 mypy-extensions==1.0.0
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.2.1
 nltk==3.9.1
 notebook==7.2.2
 notebook_shim==0.2.4
 num2words==0.5.13
+numba==0.60.0
 numexpr==2.10.1
-openai==0.27.6
+numpy==1.26.4
+ollama==0.3.2
+opt-einsum==3.3.0
+optree==0.12.1
 orjson==3.10.7
 outcome==1.3.0.post0
 overrides==7.7.0
+packaging==24.1
+pandas==2.2.2
+pandocfilters==1.5.1
 parsel==1.9.1
+parso==0.8.4
 partd==1.4.2
 pathspec==0.12.1
 patsy==0.5.6
 pefile==2024.8.26
 pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.4.0
+platformdirs==4.3.3
+plotly==5.24.1
 posthog==3.6.6
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
 prompthub-py==4.0.0
 Protego==0.3.1
+protobuf==4.25.4
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAudio==0.2.14
+pycodestyle==2.12.1
+pycparser==2.22
 pydantic==1.10.18
 pydantic_core==2.20.1
 PyDispatcher==2.0.7
 pydocstyle==6.3.0
 pyflakes==3.2.0
-pylangacq==0.15.0
+Pygments==2.18.0
+PyJWT==2.9.0
 pylint==3.2.7
 pyOpenSSL==24.2.1
+pyparsing==3.1.4
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+python-ptrace==0.9.9
 pytoolconfig==1.3.1
+pytz==2024.2
+pywin32==306
+pywinpty==2.0.13
+PyYAML==6.0.2
+pyzmq==26.2.0
 quantulum3==0.9.2
 queuelib==1.7.0
 rank-bm25==0.2.2
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
 requests-cache==0.9.8
 requests-file==2.1.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.8.1
+rpds-py==0.20.0
 Rtree==1.3.0
-scrapy==2.11.2
+safetensors==0.4.5
+scikit-image==0.24.0
+scikit-learn==1.5.2
+scipy==1.13.1
+Scrapy==2.11.2
 scrapy-selenium==0.0.7
 seaborn==0.13.2
 selenium==4.24.0
@@ -127,33 +233,67 @@ Send2Trash==1.8.3
 sentence-transformers==3.0.0
 sentencepiece==0.2.0
 service-identity==24.1.0
+six==1.16.0
 smart-open==7.0.4
 smmap==5.0.1
+sniffio==1.3.1
 snowballstemmer==2.2.0
 sortedcontainers==2.4.0
+soupsieve==2.6
 SpeechRecognition==3.10.4
 SQLAlchemy==2.0.32
 sseclient-py==1.8.0
+stack-data==0.6.3
 statsmodels==0.14.3
+sympy==1.13.2
 tblib==3.0.0
+tenacity==8.5.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+terminado==0.18.1
 tf_keras==2.17.0
+threadpoolctl==3.5.0
+tifffile==2024.8.30
 tiktoken==0.7.0
+tinycss2==1.3.0
 tldextract==5.1.2
+tokenizers==0.20.0
+tomli==2.0.1
+tomlkit==0.13.2
 toolz==0.12.1
+torch==2.4.1
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+transformers==4.45.1
 trio==0.26.2
 trio-websocket==0.11.1
+typeguard==4.3.0
 types-python-dateutil==2.9.0.20240906
+typing_extensions==4.12.2
 tzdata==2024.1
 ujson==5.10.0
 uri-template==1.3.0
 url-normalize==1.4.3
+urllib3==1.26.20
 w3lib==2.2.1
 watchdog==5.0.2
+wcwidth==0.2.13
 webcolors==24.8.0
+webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.0.4
 widgetsnbextension==4.0.13
+wrapt==1.16.0
 wsproto==1.2.0
 xarray==2024.7.0
 xxhash==3.5.0
 yarl==1.9.6
 zict==3.0.0
+zipp==3.20.1
+zope.interface==7.0.3
+
